# GIS-OSS

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  render-diagrams.yml  security.yml  supply-chain.yml
config/: sample_data_manifest.json
config/postgres/: 01-init-postgis.sql  02-create-readonly-role.sh  Dockerfile
docs/: architecture.md  attorney_brief.md  brief.md  codebase_evaluation_121325.md  community_process.md  data_sources.md  data_sovereignty.md  developer_experience.md  ecosystem.md  fixes_summary.md  legal_architecture.md  llm_integration_plan.md  model_training.md  project_status.md  security_authz_onboarding.md  tribal_environmental.md
docs/diagrams/: README.md  architecture.d2  conceptual-flow.excalidraw
evals/: api_contract_cases.json  grounding_cases.json
scripts/: fetch_authoritative_dataset.py  generate_project_status.py  load_sample_data.py  manage_api_key_role.py  migrate_readonly_role.sh  prepare_offline.sh  render_diagrams.sh  run_api_contract_eval.py  run_grounding_eval.py  setup_dev.sh  verify_sample_data_provenance.py
src/: logging_config.py
src/api/: AGENTS.md  __init__.py  config.py  main.py
src/db/: __init__.py  session.py
src/governance/: __init__.py  audit_logger.py
src/llm/: __init__.py  ollama_client.py  planner.py  provider.py
src/nl/: __init__.py  strict_parser.py
src/security/: AGENTS.md  __init__.py  authorization.py  rate_limit.py
src/spatial/: __init__.py  postgis_ops.py
src/telemetry/: __init__.py  tracing.py
tests/: conftest.py
tests/fixtures/: provenance_dummy_dataset.json  sample_data_manifest_ci.json
(+16 files in other folders)
